// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`API should always have the same amount of basic authenticated endpoints 1`] = `[]`;

exports[`API should always have the same amount of bearer authenticated endpoints 1`] = `
[
  "get /diagnostic",
  "get /openAPI",
]
`;

exports[`API should always have the same amount of endpoints 1`] = `
[
  "get /delay",
  "get /diagnostic",
  "get /openAPI",
  "get /ping",
  "get /time",
  "get /{pathParam1}/{pathParam2}",
  "put /echo",
]
`;

exports[`API should always have the same amount of non authenticated endpoints 1`] = `
[
  "get /delay",
  "get /ping",
  "get /time",
  "get /{pathParam1}/{pathParam2}",
  "options /delay",
  "options /diagnostic",
  "options /echo",
  "options /openAPI",
  "options /ping",
  "options /time",
  "options /{pathParam1}/{pathParam2}",
  "put /echo",
]
`;

exports[`API should always have the same amount of optionally authenticated endpoints 1`] = `
[
  "get /openAPI",
]
`;

exports[`API should always have the same amount of publicly documented endpoints 1`] = `
[
  "get /delay",
  "get /diagnostic",
  "get /openAPI",
  "get /ping",
  "get /time",
  "get /{pathParam1}/{pathParam2}",
  "put /echo",
]
`;

exports[`API should work 1`] = `
{
  "API": {
    "components": {
      "headers": {},
      "parameters": {
        "duration": {
          "description": "Duration in milliseconds",
          "in": "query",
          "name": "duration",
          "required": true,
          "schema": {
            "type": "number",
          },
        },
        "pathParam1": {
          "description": "A number param",
          "in": "path",
          "name": "pathParam1",
          "required": true,
          "schema": {
            "type": "number",
          },
        },
        "pathParam2": {
          "description": "A list of items",
          "in": "path",
          "name": "pathParam2",
          "required": true,
          "schema": {
            "items": {
              "type": "string",
            },
            "type": "array",
          },
        },
      },
      "requestBodies": {
        "Echo": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Echo",
              },
            },
          },
          "required": true,
        },
      },
      "responses": {
        "Diagnostic": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "transactions": {
                    "additionalProperties": true,
                    "type": "object",
                  },
                },
                "required": [
                  "transactions",
                ],
                "type": "object",
              },
            },
          },
          "description": "Diagnostic",
        },
        "Echo": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/Echo",
              },
            },
          },
          "description": "Echo response",
        },
      },
      "schemas": {
        "Echo": {
          "additionalProperties": false,
          "properties": {
            "echo": {
              "type": "string",
            },
          },
          "required": [
            "echo",
          ],
          "type": "object",
        },
        "TimeSchema": {
          "additionalProperties": false,
          "properties": {
            "currentDate": {
              "format": "date-time",
              "type": "string",
            },
          },
          "type": "object",
        },
      },
      "securitySchemes": {
        "bearerAuth": {
          "description": "Bearer authentication with a user API token",
          "scheme": "bearer",
          "type": "http",
        },
      },
    },
    "info": {
      "description": "A basic Whook server",
      "title": "@whook/example",
      "version": "1.1.0",
    },
    "openapi": "3.0.3",
    "paths": {
      "/delay": {
        "get": {
          "operationId": "getDelay",
          "parameters": [
            {
              "$ref": "#/components/parameters/duration",
            },
          ],
          "responses": {
            "204": {
              "description": "Delay expired",
            },
          },
          "summary": "Answer after a given delay.",
          "tags": [
            "example",
          ],
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [
            {
              "description": "Duration in milliseconds",
              "in": "query",
              "name": "duration",
              "required": false,
              "schema": {
                "type": "number",
              },
            },
          ],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getDelay",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/diagnostic": {
        "get": {
          "operationId": "getDiagnostic",
          "parameters": [],
          "responses": {
            "200": {
              "$ref": "#/components/responses/Diagnostic",
            },
          },
          "security": [
            {
              "bearerAuth": [
                "admin",
              ],
            },
          ],
          "summary": "Returns current API's transactions.",
          "tags": [
            "system",
          ],
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [
            {
              "in": "query",
              "name": "access_token",
              "schema": {
                "type": "string",
              },
            },
          ],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getDiagnostic",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/echo": {
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "putEcho",
            "suffix": "CORS",
            "type": "http",
          },
        },
        "put": {
          "operationId": "putEcho",
          "requestBody": {
            "$ref": "#/components/requestBodies/Echo",
          },
          "responses": {
            "200": {
              "$ref": "#/components/responses/Echo",
            },
          },
          "summary": "Echoes what it takes.",
          "tags": [
            "example",
          ],
        },
      },
      "/openAPI": {
        "get": {
          "operationId": "getOpenAPI",
          "parameters": [],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "type": "object",
                  },
                },
              },
              "description": "Provides the private Open API documentation",
            },
          },
          "security": [
            {},
            {
              "bearerAuth": [
                "admin",
              ],
            },
          ],
          "summary": "Get API documentation.",
          "tags": [
            "system",
          ],
          "x-whook": {
            "private": false,
          },
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [
            {
              "in": "query",
              "name": "access_token",
              "schema": {
                "type": "string",
              },
            },
          ],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getOpenAPI",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/ping": {
        "get": {
          "operationId": "getPing",
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "additionalProperties": false,
                    "properties": {
                      "pong": {
                        "enum": [
                          "pong",
                        ],
                        "type": "string",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Pong",
            },
          },
          "summary": "Checks API's availability.",
          "tags": [
            "system",
          ],
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getPing",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/time": {
        "get": {
          "operationId": "getTime",
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "$ref": "#/components/schemas/TimeSchema",
                  },
                },
              },
              "description": "Server current date",
            },
          },
          "summary": "Get API internal clock date.",
          "tags": [
            "system",
          ],
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getTime",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
      "/{pathParam1}/{pathParam2}": {
        "get": {
          "operationId": "getParameters",
          "parameters": [
            {
              "$ref": "#/components/parameters/pathParam1",
            },
            {
              "$ref": "#/components/parameters/pathParam2",
            },
            {
              "in": "header",
              "name": "aHeader",
              "schema": {
                "type": "boolean",
              },
            },
          ],
          "responses": {
            "200": {
              "content": {
                "application/json": {
                  "schema": {
                    "properties": {
                      "aHeader": {
                        "type": "boolean",
                      },
                      "pathParam1": {
                        "type": "number",
                      },
                      "pathParam2": {
                        "items": {
                          "type": "string",
                        },
                        "type": "array",
                      },
                    },
                    "type": "object",
                  },
                },
              },
              "description": "Delay expired",
            },
          },
          "summary": "An handler intended to test parameters.",
          "tags": [
            "example",
          ],
        },
        "options": {
          "operationId": "optionsWithCORS",
          "parameters": [
            {
              "$ref": "#/components/parameters/pathParam1",
            },
            {
              "$ref": "#/components/parameters/pathParam2",
            },
          ],
          "responses": {
            "200": {
              "description": "CORS sent.",
            },
          },
          "summary": "Enable OPTIONS for CORS",
          "tags": [
            "CORS",
          ],
          "x-whook": {
            "private": true,
            "sourceOperationId": "getParameters",
            "suffix": "CORS",
            "type": "http",
          },
        },
      },
    },
    "servers": [
      {
        "url": "http://localhost:1337",
      },
    ],
    "tags": [
      {
        "name": "system",
      },
    ],
  },
  "logCalls": [
    [
      "debug",
      "🦄 - Initializing the API service!",
    ],
  ],
}
`;
